cambios a la sección de proyectos

--- a/index-en.html
+++ b/index-en.html
@@ -237,71 +237,7 @@
       <h2 class="section__title">Projects</h2>
 
       <div class="projects__container grid--container">
-        <div class="projects__project">
-          <div class="projects__inner grid--container">
-            <div class="projects__image">
-              <img src="assets/img/sgpa_proyecto.png" alt="project 1" title="SGPA Project" />
-            </div>
-
-            <div class="projects__info">
-              <h3 class="projects__name">SGPA</h3>
-              <p class="projects__description">
-                web platform designed to facilitate the management of academic projects within the university, using
-                Java, PrimeFaces and XHTML.
-              </p>
-              <div class="projects__buttons">
-                <button class="btn projects__button" type="button">
-                  WATCH CODE
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="projects__project">
-          <div class="projects__inner grid--container">
-            <div class="projects__image">
-              <img src="assets/img/autosoft_proyecto.png"" alt=" project 1" title="Autosoft Project" />
-            </div>
-
-            <div class="projects__info">
-              <h3 class="projects__name">Autosoft</h3>
-              <p class="projects__description">
-                Web application to optimize internal operations of automotive workshops, using PHP and MySQL for
-                business logic and database.
-              </p>
-
-              <div class="projects__buttons">
-                <button class="btn projects__button" type="button">
-                  WATCH CODE
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="projects__project">
-          <div class="projects__inner grid--container">
-            <div class="projects__image">
-              <img src="assets/img/TouriC_proyecto.png" alt="project 1" title="TouriC Project" />
-            </div>
-
-            <div class="projects__info">
-              <h3 class="projects__name">TouriC</h3>
-              <p class="projects__description">
-                Interactive chatbot to provide tourist information in Cartagena, developed with Flutter (Dart) and the
-                Gemini API.
-              </p>
-
-              <div class="projects__buttons">
-                <button class="btn projects__button" type="button">
-                  WATCH CODE
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-
+        <!-- This is the first project -->
         <div class="projects__project">
           <div class="projects__inner grid--container">
             <div class="projects__image">
@@ -311,12 +247,87 @@
             <div class="projects__info">
               <h3 class="projects__name">Tenisco</h3>
               <p class="projects__description">
-                E-commerce platform developed with React, Redux and Tailwind CSS for the sale of tennis shoes in
-                Colombia.
+                E-commerce platform developed with React, Redux and Tailwind CSS for selling sneakers in Colombia.
               </p>
 
               <div class="projects__buttons">
-                <button class="btn projects__button" type="button">
+                <button class="btn projects__button" data-repo="https://github.com/dereckmg2803/eshoes" type="button">
+                  WATCH CODE
+                </button>
+                <button class="btn projects__button" data-repo="https://teniscolombia.vercel.app" type="button">
+                  LIVE DEMO
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- This is the second project -->
+        <div class="projects__project">
+          <div class="projects__inner grid--container">
+            <div class="projects__image">
+              <img src="assets/img/sgpa_proyecto.png" alt="project 2" title="SGPA Project" />
+            </div>
+
+            <div class="projects__info">
+              <h3 class="projects__name">SGPA</h3>
+              <p class="projects__description">
+                Platform designed to facilitate the management of various academic projects, using Java, PrimeFaces and
+                XHTML.
+              </p>
+
+              <div class="projects__buttons">
+                <button class="btn projects__button" data-repo="https://github.com/dereckmg2803/SGPA" type="button">
+                  WATCH CODE
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- This is the third project -->
+        <div class="projects__project">
+          <div class="projects__inner grid--container">
+            <div class="projects__image">
+              <img src="assets/img/Pokedex_proyecto.png" alt="project 3" title="Pokedex Project" />
+            </div>
+
+            <div class="projects__info">
+              <h3 class="projects__name">Pokedex</h3>
+              <p class="projects__description">
+                Interactive Pokédex with search and listing of Pokémon, developed in React using an API to display
+                detailed information about each one.
+              </p>
+
+              <div class="projects__buttons">
+                <button class="btn projects__button" data-repo="https://github.com/dereckmg2803/chatbot" type="button">
+                  WATCH CODE
+                </button>
+                <button class="btn projects__button" data-repo="https://pokedex-phi-indol.vercel.app/#/pokedex"
+                  type="button">
+                  LIVE DEMO
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- This is the fourth project -->
+        <div class="projects__project">
+          <div class="projects__inner grid--container">
+            <div class="projects__image">
+              <img src="assets/img/autosoft_proyecto.png" alt="project 4" title="Autosoft Project" />
+            </div>
+
+            <div class="projects__info">
+              <h3 class="projects__name">Autosoft</h3>
+              <p class="projects__description">
+                Application to optimize the internal operations of automotive workshops, using PHP and MySQL for
+                business logic and database management.
+              </p>
+
+              <div class="projects__buttons">
+                <button class="btn projects__button" data-repo="https://github.com/dereckmg2803/Autosoft" type="button">
                   WATCH CODE
                 </button>
               </div>
@@ -325,6 +336,7 @@
         </div>
       </div>
     </section>
+
     <section id="contact" class="contact section">
       <h2 class="section__title">Contact</h2>
 
