--- a/index.html
+++ b/index.html
@@ -243,72 +243,7 @@
       <h2 class="section__title">Proyectos</h2>
 
       <div class="projects__container grid--container">
-        <div class="projects__project">
-          <div class="projects__inner grid--container">
-            <div class="projects__image">
-              <img src="assets/img/sgpa_proyecto.png" alt="project 1" title="Proyecto SGPA" />
-            </div>
-
-            <div class="projects__info">
-              <h3 class="projects__name">SGPA</h3>
-              <p class="projects__description">
-                Plataforma web diseñada para facilitar la gestión de proyectos académicos, utilizando Java, PrimeFaces y
-                XHTML.
-              </p>
-
-              <div class="projects__buttons">
-                <button class="btn projects__button" data-repo="https://github.com/dereckmg2803/SGPA" type="button">
-                  VER CÓDIGO
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="projects__project">
-          <div class="projects__inner grid--container">
-            <div class="projects__image">
-              <img src="assets/img/autosoft_proyecto.png" alt="project 1" title="Proyecto Autosoft" />
-            </div>
-
-            <div class="projects__info">
-              <h3 class="projects__name">Autosoft</h3>
-              <p class="projects__description">
-                Aplicativo web para optimizar las operaciones internas de talleres automotrices, utilizando PHP y MySQL
-                para la lógica de negocio y base de datos.
-              </p>
-
-              <div class="projects__buttons">
-                <button class="btn projects__button" data-repo="https://github.com/dereckmg2803/Autosoft" type="button">
-                  VER CÓDIGO
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="projects__project">
-          <div class="projects__inner grid--container">
-            <div class="projects__image">
-              <img src="assets/img/TouriC_proyecto.png" alt="project 1" title="Proyecto TouriC" />
-            </div>
-
-            <div class="projects__info">
-              <h3 class="projects__name">TouriC</h3>
-              <p class="projects__description">
-                Chatbot interactivo para proporcionar información turística en Cartagena, desarrollado con Flutter
-                (Dart) y la API de Gemini.
-              </p>
-
-              <div class="projects__buttons">
-                <button class="btn projects__button" data-repo="https://github.com/dereckmg2803/chatbot" type="button">
-                  VER CÓDIGO
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-
+        <!-- Este es el primer proyecto -->
         <div class="projects__project">
           <div class="projects__inner grid--container">
             <div class="projects__image">
@@ -326,12 +261,89 @@
                 <button class="btn projects__button" data-repo="https://github.com/dereckmg2803/eshoes" type="button">
                   VER CÓDIGO
                 </button>
+                <button class="btn projects__button" data-repo="https://teniscolombia.vercel.app" type="button">
+                  VER DEMO
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Este es el segundo proyecto -->
+        <div class="projects__project">
+          <div class="projects__inner grid--container">
+            <div class="projects__image">
+              <img src="assets/img/sgpa_proyecto.png" alt="project 2" title="Proyecto SGPA" />
+            </div>
+
+            <div class="projects__info">
+              <h3 class="projects__name">SGPA</h3>
+              <p class="projects__description">
+                Plataforma diseñada para facilitar la gestión de diversos proyectos académicos, utilizando Java,
+                PrimeFaces y XHTML.
+              </p>
+
+              <div class="projects__buttons">
+                <button class="btn projects__button" data-repo="https://github.com/dereckmg2803/SGPA" type="button">
+                  VER CÓDIGO
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Este es el tercer proyecto -->
+        <div class="projects__project">
+          <div class="projects__inner grid--container">
+            <div class="projects__image">
+              <img src="assets/img/Pokedex_proyecto.png" alt="project 3" title="Proyecto Pokedex" />
+            </div>
+
+            <div class="projects__info">
+              <h3 class="projects__name">Pokedex</h3>
+              <p class="projects__description">
+                Pokédex interactiva con búsqueda y listado de Pokémon, desarrollada en React utilizando una API para
+                mostrar información detallada de cada uno.
+              </p>
+
+              <div class="projects__buttons">
+                <button class="btn projects__button" data-repo="https://github.com/dereckmg2803/chatbot" type="button">
+                  VER CÓDIGO
+                </button>
+                <button class="btn projects__button" data-repo="https://pokedex-phi-indol.vercel.app/#/pokedex"
+                  type="button">
+                  VER DEMO
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Este es el cuarto proyecto -->
+        <div class="projects__project">
+          <div class="projects__inner grid--container">
+            <div class="projects__image">
+              <img src="assets/img/autosoft_proyecto.png" alt="project 4" title="Proyecto Autosoft" />
+            </div>
+
+            <div class="projects__info">
+              <h3 class="projects__name">Autosoft</h3>
+              <p class="projects__description">
+                Aplicación para optimizar las operaciones internas de talleres automotrices, utilizando PHP y MySQL para
+                la lógica de negocio y gestión de base de datos.
+              </p>
+
+              <div class="projects__buttons">
+                <button class="btn projects__button" data-repo="https://github.com/dereckmg2803/Autosoft" type="button">
+                  VER CÓDIGO
+                </button>
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
+
     <section id="contact" class="contact section">
       <h2 class="section__title">Contacto</h2>
 
